Prevent breaking width on small devices

--- a/themes/Default/less/screen.less
+++ b/themes/Default/less/screen.less
@@ -364,6 +364,10 @@ dt {
 
 .slideshow {
 	margin: 2em 0;
+
+	div {
+		max-width: 100%;
+	}
 }
 
 .gallery img {
