--- a/themes/Default/less/small.less
+++ b/themes/Default/less/small.less
@@ -53,6 +53,10 @@ pre {
 	.page-nav {
 		margin: 1.5em auto 1em;
 
+		select {
+			max-width: 100%;
+		}
+
 		ul ul {
 			margin-left: 2em;
 		}
